# TaskFlow

./: .env  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/: manage.py
src/config/: settings.py  urls.py  wsgi.py
src/taskflowapp/: apps.py  models.py  tests_views.py  urls.py  views.py
src/taskflowapp/migrations/: 0001_initial.py  0002_alter_task_status.py
src/taskflowapp/templates/: base.html
src/taskflowapp/templates/taskflowapp/: task_create.html  task_delete.html  task_list.html  task_update.html
